--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header class="header">
         <!--changed div to header because it holdes the main headings and navigation links -->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <p>
+        <!-- changed div to nav because it holdes the navigation links-->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,16 +24,17 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </p>
+        </nav>
     </header>
     <figure class="hero"></figure>
-    <!--changed div to figure beccuse it hold the main picture of the site  -->
+    <!--changed div to figure because it hold the main picture of the site  -->
     <main class="content">
         <!--chaged class to main because it holds the main of the webpages information -->
         <section id= "search-engine-optimization" class="search-engine-optimization">
             <!-- changed div to section to group all items related to search engine optimization -->
              <!-- Added id equals  -->
-            <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left" />
+             <!--added alternative text if image doesnt show up-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="laptop and note book with words seo in the middle of the page with content,headings,mobile compatbilty,social media,link bulding, and backlink surrounding " class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -40,7 +42,8 @@
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
             <!--changed div to section to group togther all items related to online reputation-->
-            <img src="./assets/images/online-reputation-management.jpg"alt="reputation management" class="float-right" />
+            <!--added alternative text if image doesnt show up-->
+            <img src="./assets/images/online-reputation-management.jpg"alt="person on laptop with colorful graphs with header of reputationand  cellphone in hand " class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -48,7 +51,8 @@
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
             <!--changed div to secetions to group togther all items related to social media marketng -->
-            <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing"class="float-left" />
+            <!--added alternative text if image doesnt show up-->
+            <img src="./assets/images/social-media-marketing.jpg" alt="6 people sitting around table with words media, share, and like in text bubbles"class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -60,7 +64,8 @@
         <article class="benefit-lead">
             <!--changed div to article-->
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="lead generation" />
+            <!--added alternative text if image doesnt show up-->
+            <img src="./assets/images/lead-generation.png" alt="gear down arrow and coin " />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -68,7 +73,8 @@
         <article class="benefit-brand">
             <!--changed div to article-->
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="brand awarness" />
+            <!--added alternative text if image doesnt show up-->
+            <img src="./assets/images/brand-awareness.png" alt="man in a suit with a light bulb head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -76,7 +82,8 @@
         <article class="benefit-cost">
             <!-- changed div to article-->
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="cost management" />
+            <!--added alternative text if image doesnt show up-->
+            <img src="./assets/images/cost-management.png" alt="coins and a gear " />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
